fix width
Added a max width for the image container so the images don't get stretched

--- a/src/sass/components/basic.scss
+++ b/src/sass/components/basic.scss
@@ -71,6 +71,7 @@
 
   @media #{$mq-md} {
     width: 60%;
+    max-width: #{$mq-sm};
 
   }
 }
